# biscuit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  biscuit.sln  vcpkg.json
biscuit/: CMakeLists.txt  biscuit.h  biscuit.ixx
include/biscuit/: biscuit.h  config.h  dependencies_asio.hxx  dependencies_cereal.h  dependencies_ctre.h  dependencies_ctre.hxx  dependencies_eigen.h  dependencies_fmt.h  dependencies_fmt.hxx  dependencies_glaze.h  dependencies_iconv.hxx  dependencies_magic_enum.hxx  dependencies_opencv.h  dependencies_opencv.hxx  dependencies_simdutf.h  dependencies_spdlog.h  dependencies_spdlog.hxx  dependencies_units.h  dependencies_units.hxx  glaze_helper.h  macro.h  recursive_macro.h  reflection_glaze.h
include/biscuit/dependencies/: asio.hxx  cereal.hxx  ctre.hxx  eigen.hxx  fmt.hxx  glaze.h  iconv.hxx  magic_enum.hxx  opencv.hxx  simdutf.hxx  spdlog.hxx  units.hxx
include/biscuit/opencv/: glaze_helper.h
include/biscuit/qt/: MatView.h  MatViewCanvas.h  MatViewDlg.h  ProgressDlg.h  QCollapsibleGroupBox.h  QColorButton.h  QGlazeModel.h  QPathCompleter.h  QRoundButton.h  biscuit_widgets.h  macro.h
include/verdigris/: wobjectcpp.h
src/: CMakeLists.txt
src/ThirdParties/: CMakeLists.txt  Eigen.ixx  ThirdParties.ixx  ThirdParties.vcxproj  ThirdParties.vcxproj.filters  cereal.ixx  fmt.hxx  fmt.ixx  framework.h  units.ixx
src/biscuit/: CMakeLists.txt  aliases.hpp  aliases.ixx  archive.ixx  arithmetic.ixx  axis.ixx  biscuit.h  biscuit.ixx  biscuit.vcxproj  biscuit.vcxproj.filters  bmp_file_header.ixx  cereal_helper.ixx  charset_kssm.ixx  codepage.ixx  color.ixx  concepts.ixx  container_map.ixx  convert_codepage.ixx  coord.base.ixx  coord.bounds.ixx  coord.concepts.ixx  coord.ixx  coord.point.ixx  coord.rect.ixx  coord.size.ixx  coord.transform.ixx  dll.h  dllmain.cpp  framework.h  glaze_helper.ixx  iconv_wrapper.ixx  kssm.ixx  lazy_profile.ixx  memory.ixx  misc.ixx  mutex.ixx  rand.ixx  reflection.ixx  sequence.base.ixx  sequence.coroutine_handle.ixx  (+17 more)
src/biscuit.dxf/: 0.biscuit.dxf.ixx  archive.cpp  archive.ixx  biscuit.dxf.vcxproj  biscuit.dxf.vcxproj.filters  entities.ixx  entities_subclass.ixx  group.ixx  group_code_alias.py  group_code_type_alias.ixx  group_code_type_alias.py  macro.h  sections.ixx  stream.cpp  stream.ixx  type_alias.ixx  type_alias.txt
src/biscuit.opencv/: CMakeLists.txt  biscuit.opencv.ixx  biscuit.opencv.vcxproj  biscuit.opencv.vcxproj.filters  bmp_file_archive.ixx  mat_gl.ixx  mat_operation.ixx
src/biscuit.qt/: MatBitmapArchive.ixx  MatView.cpp  MatView.ixx  MatView.ui  MatViewCanvas.ixx  MatViewDlg.cpp  MatViewDlg.ixx  MatViewDlg.ui  MatViewOption.ixx  MatViewSettingsDlg.cpp  MatViewSettingsDlg.h  MatViewSettingsDlg.ixx  ProgressDlg.cpp  ProgressDlg.ixx  QCollapsibleGroupBox.cpp  QCollapsibleGroupBox.ixx  QColorButton.cpp  QColorButton.ixx  QFileFolderBrowser.ixx  QGlazeModel.cpp  QPathCompleter.cpp  QPathCompleter.ixx  QRoundButton.cpp  QRoundButton.ixx  biscuit.qt.Widgets.ixx  biscuit.qt.ixx  biscuit.qt.vcxproj  biscuit.qt.vcxproj.filters  biscuit.qt_global.h  biscuit_qt.cpp  biscuit_qt.h  ui_data_exchange.ixx  utils.ixx
src/biscuit.shape/: biscuit.shape.cpp  biscuit.shape.ixx  biscuit.shape.vcxproj  biscuit.shape.vcxproj.filters  canvas.ixx  color_table.ixx  dxf_loader.ixx  entities.arc.ixx  entities.block.ixx  entities.circle.ixx  entities.dot.ixx  entities.drawing.ixx  entities.ellipse.ixx  entities.group.ixx  entities.hatch.ixx  entities.impl.cpp  entities.insert.ixx  entities.ixx  entities.layer.ixx  entities.line.ixx  entities.polyline.ixx  entities.shape.ixx  entities.spline.ixx  entities.text.ixx  shape.ixx  shape_basic.ixx  shape_macro.h
src/biscuit.win/: EnvironmentVariable.ixx  biscuit.win.ixx  biscuit.win.vcxproj  biscuit.win.vcxproj.filters  win.ixx
src/test/: CMakeLists.txt  main.cpp  string_convert_codepage.cpp  test.cpp  test.vcxproj  test.vcxproj.filters  test_archive.cpp  test_coord.cpp  test_lazy_profile.cpp  test_memory.cpp  test_misc.cpp  test_mutex.cpp  test_sequence.cpp  test_sequence_map.cpp  test_sequence_tReturn.cpp  test_string.arithmetic.cpp  test_string.basic.cpp  test_string.convert_codepage.cpp  test_string.manipulates.cpp  test_win.cpp
src/test.dxf/: main.cpp  test.dxf.cpp  test.dxf.vcxproj  test.dxf.vcxproj.filters
src/test.qt/: main.cpp  test.cpp  test.h  test.qt.vcxproj  test.qt.vcxproj.filters  test.ui
src/test/codepage sample/: CP949 가나다라마바사똠똠똠.txt  KSSM 가나다라마바사똠똠똠.txt
src/test/ini/: lazy_profile.ini  lazy_profileU8.ini  lazy_profileW.ini
test/: 0.main.cpp  CMakeLists.txt  test.cpp
test/test/: CMakeLists.txt  test.cpp  test.vcxproj
